@@ -1,0 +1,1 @@
+export { default as useIsDesktopHook } from './src/useIsDesktopHook.jsx';
