@@ -9,3 +9,4 @@
 2023-08-03T14:20:07.296Z |            1.6.1 | fix
 2023-10-31T10:02:32.971Z |            1.7.0 | nl2br
 2023-11-10T14:14:49.034Z |            1.7.1 | text-utilities fix
+2023-11-14T13:04:31.294Z |            1.8.0 | react hooks: useIsDesktopHook
